force-app/main/default/objects/Documentation__c/Documentation__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Documentation</label>
    <nameField>
        <displayFormat>Documentation-{0000}</displayFormat>
        <label>Documentation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>