force-app/main/default/objects/Documentation__c/fields/Date_Provided_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Provided_to_Client__c</fullName>
    <label>Date Provided to Client</label>
    <type>Date</type>
</CustomField>