force-app/main/default/objects/Documentation__c/fields/Date_Staff_Signed_Form__c.field-meta.xml
<CustomField>
    <fullName>Date_Staff_Signed_Form__c</fullName>
    <label>Date Staff Signed Form</label>
    <type>Date</type>
</CustomField>