force-app/main/default/objects/Documentation__c/fields/Notification_By__c.field-meta.xml
<CustomField>
    <fullName>Notification_By__c</fullName>
    <label>Notification By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDPH</fullName>
            </value>
            <value>
                <fullName>Magnet</fullName>
            </value>
            <value>
                <fullName>Sex Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>