force-app/main/default/objects/Documentation__c/fields/Notification_Method_Other__c.field-meta.xml
<CustomField>
    <fullName>Notification_Method_Other__c</fullName>
    <label>Notification Method - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>