force-app/main/default/objects/Documentation__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact to Syphilis</fullName>
            </value>
            <value>
                <fullName>Positive HIV Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>