force-app/main/default/objects/Documentation__c/fields/Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Date__c</fullName>
    <label>Obtained Date</label>
    <type>Date</type>
</CustomField>