force-app/main/default/objects/Documentation__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by workflow to generate task/email reminder</description>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>