force-app/main/default/objects/Documentation__c/fields/Source_Other__c.field-meta.xml
<CustomField>
    <fullName>Source_Other__c</fullName>
    <label>Source Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>