force-app/main/default/objects/Documentation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used by workflow</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARIES Consent Form</fullName>
            </value>
            <value>
                <fullName>Authorization for Exchange of Information</fullName>
            </value>
            <value>
                <fullName>Client Grievance Form</fullName>
            </value>
            <value>
                <fullName>Client Rights &amp; Responsibilities</fullName>
            </value>
            <value>
                <fullName>Consent for General Release of Medical Records</fullName>
            </value>
            <value>
                <fullName>HIPPA Privacy Practices</fullName>
            </value>
            <value>
                <fullName>HIV Letter of Diagnosis</fullName>
            </value>
            <value>
                <fullName>Negative HIV Diagnosis Letter</fullName>
            </value>
            <value>
                <fullName>Positive HIV Diagnosis Letter</fullName>
            </value>
            <value>
                <fullName>Proof of Income</fullName>
            </value>
            <value>
                <fullName>Proof of Residence</fullName>
            </value>
            <value>
                <fullName>Refusal of Care Acknowledgement Form</fullName>
            </value>
            <value>
                <fullName>Rental Subsidy Agreement</fullName>
            </value>
            <value>
                <fullName>SFAF Consent for Services</fullName>
            </value>
            <value>
                <fullName>Treatment Disclosure Form for Contacts to Syphilis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>